feat: add header, main, footer blocks(size&color)

--- a/singolo1.html
+++ b/singolo1.html
@@ -1,16 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Project</title>
-    <link href="./cssDir/file.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Project</title>
+  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+  <link href="./singolo1.css" rel="stylesheet" type="text/css" media="all">
+</head>
+
+<body>
+  <header class="header">
+    <div class="logo">
+    </div>
+    <navigation>
+    </navigation>
+  </header>
+  <section class="main">
+  </section>
+  <footer class="footer">
+  </footer>
 
 
 
+</body>
 
-  </body>
 </html>
