--- a/singolo1.html
+++ b/singolo1.html
@@ -8,13 +8,20 @@
   <title>Project</title>
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
   <link href="./singolo1.css" rel="stylesheet" type="text/css" media="all">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
   <header class="header">
     <div class="logo">
+      <img src="./assets/img/SINGOLO_.svg">
     </div>
-    <navigation>
+    <navigation class="navigation">
+      <span>home</span>
+      <span>services</span>
+      <span>portfolio</span>
+      <span>about</span>
+      <span>contact</span>
     </navigation>
   </header>
   <section class="main">
