--- a/singolo1.html
+++ b/singolo1.html
@@ -8,23 +8,29 @@
   <title>Project</title>
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
   <link href="./singolo1.css" rel="stylesheet" type="text/css" media="all">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header class="header">
     <div class="logo">
-      <img src="./assets/img/SINGOLO_.svg">
+      <span class="logoSpan">SINGOLO<span class="red">*</span></span>
     </div>
     <navigation class="navigation">
-      <span>home</span>
-      <span>services</span>
-      <span>portfolio</span>
-      <span>about</span>
-      <span>contact</span>
+      <a href="#">home</a>
+      <a href="#">services</a>
+      <a href="#">portfolio</a>
+      <a href="#">about</a>
+      <a href="#">contact</a>
     </navigation>
   </header>
+
+
   <section class="main">
+    <img src="./assets/img/arrowLeft.svg" class="arrowLeft">
+    <img src="./assets/img/iPhoneVertical.png" class="iPhoneVertical">
+    <img src="./assets/img/iPhoneHorizontal.png" class="iPhoneGorizontal">
+    <img src="./assets/img/arrowRight.svg" class="arrowRight">
   </section>
   <footer class="footer">
   </footer>
