--- a/singolo1.html
+++ b/singolo1.html
@@ -8,8 +8,7 @@
   <title>Project</title>
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
   <link href="./singolo1.css" rel="stylesheet" type="text/css" media="all">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-</head>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,700i,900&display=swap" rel="stylesheet">
 
 <body>
   <header class="header">
@@ -24,15 +23,71 @@
       <a href="#">contact</a>
     </navigation>
   </header>
+  <h1>iPhones</h1>
 
 
   <section class="main">
-    <img src="./assets/img/arrowLeft.svg" class="arrowLeft">
+    <img src="./assets/img/arrowLeft.svg./assets/img/arrowLeft.svg" class="arrowLeft">
     <img src="./assets/img/iPhoneVertical.png" class="iPhoneVertical">
     <img src="./assets/img/iPhoneHorizontal.png" class="iPhoneGorizontal">
     <img src="./assets/img/arrowRight.svg" class="arrowRight">
   </section>
   <footer class="footer">
+    <h2 class="h2">Our Services</h2>
+    <p class="servicesDescription">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
+      mollis, non commodo luctus, nici erat porttior ligula, eget lacinia odio
+      sem nec elit.Fusce dapibus, tellus ac cursus commodo, tortor mauris
+      condimentum nibh </p>
+    <div class="cards">
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/pen.svg"></div>
+        <div class="cardText">
+          <h3>Custom Design</h3>
+          <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
+            laoreet, viverra lacus ut,ultrices velit </p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/bulb.svg"></div>
+        <div class="cardText">
+          <h3>Inovative Ideas</h3>
+          <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus,
+            nec rutrum tellus dolor id lorem</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/heart.svg"></div>
+        <div class="cardText">
+          <h3>Love Is The Answer</h3>
+          <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
+            consequat felis. Quisque condimentum</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/phone.svg"></div>
+        <div class="cardText">
+          <h3>Responsive Layout</h3>
+          <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit
+            nunc ligula. Praecent elit leo.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/bubble.svg"></div>
+        <div class="cardText">
+          <h3>24 / 7 Support</h3>
+          <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a
+            sem erat. Pellentesque egestas venenatis lorem.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/star.svg"></div>
+        <div class="cardText">
+          <h3>Feel Like A Star</h3>
+          <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh
+            vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+        </div>
+      </div>
+    </div>
   </footer>
 
 
