fix: add additional final styles

--- a/singolo1.html
+++ b/singolo1.html
@@ -27,7 +27,7 @@
 
 
   <section class="main">
-    <img src="./assets/img/arrowLeft.svg./assets/img/arrowLeft.svg" class="arrowLeft">
+    <img src="./assets/img/arrowLeft.svg" class="arrowLeft">
     <img src="./assets/img/iPhoneVertical.png" class="iPhoneVertical">
     <img src="./assets/img/iPhoneHorizontal.png" class="iPhoneGorizontal">
     <img src="./assets/img/arrowRight.svg" class="arrowRight">
@@ -83,8 +83,8 @@
         <div class="ellipseBack"><img src="./assets/img/star.svg"></div>
         <div class="cardText">
           <h3>Feel Like A Star</h3>
-          <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh
-            vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+          <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
+            Fusce vitae aliquam tellus.</p>
         </div>
       </div>
     </div>
