feat: add gradient card hover

--- a/singolo1.html
+++ b/singolo1.html
@@ -32,7 +32,7 @@
     <img src="./assets/img/iPhoneHorizontal.png" class="iPhoneGorizontal">
     <img src="./assets/img/arrowRight.svg" class="arrowRight">
   </section>
-  <footer class="footer">
+  <div class="services">
     <h2 class="h2">Our Services</h2>
     <p class="servicesDescription">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
       mollis, non commodo luctus, nici erat porttior ligula, eget lacinia odio
@@ -88,7 +88,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </div>
 
 
 
