--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span class="logoSpan">SINGOLO<span class="red">*</span></span>
     </div>
     <navigation class="navigation">
-      <a href="#">home</a>
+      <a href="#"><span class="red">home</span></a>
       <a href="#">services</a>
       <a href="#">portfolio</a>
       <a href="#">about</a>
@@ -35,9 +35,9 @@
   <div class="services">
     <h2 class="h2">Our Services</h2>
     <p class="servicesDescription">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
-      mollis, non commodo luctus, nici erat porttior ligula, eget lacinia odio
-      sem nec elit.Fusce dapibus, tellus ac cursus commodo, tortor mauris
-      condimentum nibh </p>
+      mollis, non commodo luctus, nici erat porttitor ligula, eget lacinia odio
+      sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+      condimentum nibh. </p>
     <div class="cards">
       <div class="card">
         <div class="ellipseBack"><img src="./assets/img/pen.svg"></div>
@@ -51,7 +51,7 @@
         <div class="ellipseBack"><img src="./assets/img/bulb.svg"></div>
         <div class="cardText">
           <h3>Inovative Ideas</h3>
-          <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus,
+          <p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus,
             nec rutrum tellus dolor id lorem</p>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <div class="cardText">
           <h3>Responsive Layout</h3>
           <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit
-            nunc ligula. Praecent elit leo.</p>
+            nunc ligula. Prae- cent elit leo.</p>
         </div>
       </div>
       <div class="card">
@@ -76,7 +76,7 @@
         <div class="cardText">
           <h3>24 / 7 Support</h3>
           <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a
-            sem erat. Pellentesque egestas venenatis lorem.</p>
+            sem erat. Pellen- tesque egestas venenatis lorem.</p>
         </div>
       </div>
       <div class="card">
