docs: update singolo1.html

--- a/singolo1.html
+++ b/singolo1.html
@@ -26,12 +26,12 @@
   <h1>iPhones</h1>
 
 
-  <section class="main">
+  <main class="main">
     <img src="./assets/img/arrowLeft.svg" class="arrowLeft">
     <img src="./assets/img/iPhoneVertical.png" class="iPhoneVertical">
     <img src="./assets/img/iPhoneHorizontal.png" class="iPhoneGorizontal">
     <img src="./assets/img/arrowRight.svg" class="arrowRight">
-  </section>
+  </main>
   <div class="services">
     <h2 class="h2">Our Services</h2>
     <p class="servicesDescription">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
