fix: navigation(dots)

--- a/singolo1.html
+++ b/singolo1.html
@@ -9,30 +9,33 @@
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
   <link href="./singolo1.css" rel="stylesheet" type="text/css" media="all">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,700i,900&display=swap" rel="stylesheet">
+</head>
 
 <body>
   <header class="header">
     <div class="logo">
       <span class="logoSpan">SINGOLO<span class="red">*</span></span>
     </div>
-    <navigation class="navigation">
-      <a href="#"><span class="red">home</span></a>
-      <a href="#">services</a>
-      <a href="#">portfolio</a>
-      <a href="#">about</a>
-      <a href="#">contact</a>
-    </navigation>
+    <nav class="navigation">
+      <ul>
+        <li><a href="#"><span class="red">HOME</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </nav>
   </header>
   <h1>iPhones</h1>
 
 
-  <main class="main">
+  <div class="main">
     <img src="./assets/img/arrowLeft.svg" class="arrowLeft">
     <img src="./assets/img/iPhoneVertical.png" class="iPhoneVertical">
     <img src="./assets/img/iPhoneHorizontal.png" class="iPhoneGorizontal">
     <img src="./assets/img/arrowRight.svg" class="arrowRight">
-  </main>
-  <div class="services">
+  </div>
+  <section class="services">
     <h2 class="h2">Our Services</h2>
     <p class="servicesDescription">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
       mollis, non commodo luctus, nici erat porttitor ligula, eget lacinia odio
@@ -88,7 +91,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
 
 
