fix: our services text

--- a/singolo1.html
+++ b/singolo1.html
@@ -37,10 +37,11 @@
   </div>
   <section class="services">
     <h2 class="h2">Our Services</h2>
-    <p class="servicesDescription">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
-      mollis, non commodo luctus, nici erat porttitor ligula, eget lacinia odio
-      sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-      condimentum nibh. </p>
+    <p class="servicesDescription">Fusce dapibus, tellus ac cursus commodo,
+      tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat
+      porttitor ligula, eget <span class="crutch">lacinia odio sem nec elit.
+      Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</span>
+   </p>
     <div class="cards">
       <div class="card">
         <div class="ellipseBack"><img src="./assets/img/pen.svg"></div>
@@ -77,7 +78,7 @@
       <div class="card">
         <div class="ellipseBack"><img src="./assets/img/bubble.svg"></div>
         <div class="cardText">
-          <h3>24 / 7 Support</h3>
+          <h3>24/ 7 Support</h3>
           <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a
             sem erat. Pellen- tesque egestas venenatis lorem.</p>
         </div>
