--- a/singolo2.html
+++ b/singolo2.html
@@ -10,13 +10,38 @@
   <link href="./singolo2.css" rel="stylesheet" type="text/css" media="all">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,700i,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="wrapper-2">
-    <div class="portfolio">
+    <section class="portfolio">
+      <h2>Portfolio</h2>
+      <div class="portfolio-text">Duis mollis, est non commodo luctus, nisi erat porttitor
+        ligula, eget lacinia odio sem nec elit.</div>
+      <div class="portfolio-buttons">
+        <div class="portfolio-button">All</div>
+        <div class="portfolio-button">Web Design</div>
+        <div class="portfolio-button">Graphic Design</div>
+        <div class="portfolio-button">Artwork</div>
+      </div>
+      <div class="portfolio-img">
+        <div><img src="./assets/img/img1.jpg"></div>
+        <div><img src="./assets/img/img2.jpg"></div>
+        <div><img src="./assets/img/img3.jpg"></div>
+        <div><img src="./assets/img/img4.jpg"></div>
+        <div><img src="./assets/img/img5.jpg"></div>
+        <div><img src="./assets/img/img6.jpg"></div>
+        <div><img src="./assets/img/img7.jpg"></div>
+        <div><img src="./assets/img/img8.jpg"></div>
+        <div><img src="./assets/img/img9.jpg"></div>
+        <div><img src="./assets/img/img10.jpg"></div>
+        <div><img src="./assets/img/img11.jpg"></div>
+        <div><img src="./assets/img/img12.jpg"></div>
+      </div>
 
+    </section>
 
-    </div>
-    <div class="about-us"></div>
+    <section class="about-us">
+    </section>
   </div>
 
 </body>
