feat: about-us block is ready

--- a/singolo2.html
+++ b/singolo2.html
@@ -36,11 +36,63 @@
         <div><img src="./assets/img/img10.jpg"></div>
         <div><img src="./assets/img/img11.jpg"></div>
         <div><img src="./assets/img/img12.jpg"></div>
+        <div><img src="./assets/img/img12.jpg"></div>
       </div>
 
     </section>
 
     <section class="about-us">
+      <h2>About Us</h2>
+      <p class="about-description">
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris
+        condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula,
+        eget <span class="crutch">lacinia odio sem nec elit. Fusce dapibus,
+          tellus ac cursus commodo, tortor mauris condimentum nibh. </span>
+      </p>
+
+      <div class="cards">
+        <div class="card">
+          <img src="./assets/img/face1.png">
+          <h2>Adam Jensen</h2>
+          <p class="description">
+            Quisque luctus, quam eget molestie commodo, lacus purus cursus purus,
+            nec rutrum tellus dolor id lorem.
+          </p>
+          <div class="icons">
+            <img src="./assets/img/facebook.png" class="icon">
+            <img src="./assets/img/google+.png" class="icon">
+            <img src="./assets/img/twitter.png" class="icon">
+            <img src="./assets/img/linkedin.png" class="icon">
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/img/face2.png">
+          <h2>Desmond Miles</h2>
+          <p class="description">
+            Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet,
+            viverra lacus ut, ultrices velit.
+          </p>
+          <div class="icons">
+            <img src="./assets/img/facebook.png" class="icons">
+            <img src="./assets/img/google+.png" class="icon">
+            <img src="./assets/img/twitter.png" class="icon">
+            <img src="./assets/img/linkedin.png" class="icon">
+          </div>
+        </div>
+        <div class="card"><img src="./assets/img/face3.png">
+          <h2>Scolara Visari</h2>
+          <p class="description">
+            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
+            conequat felis. Quisque condimentum.
+          </p>
+          <div class="icons">
+            <img src="./assets/img/facebook.png" class="icon">
+            <img src="./assets/img/google+.png" class="icon">
+            <img src="./assets/img/twitter.png" class="icon">
+            <img src="./assets/img/linkedin.png" class="icon">
+          </div>
+        </div>
+      </div>
     </section>
   </div>
 
