--- a/singolo3.html
+++ b/singolo3.html
@@ -7,13 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Project</title>
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
-  <link href="./singolo2.css" rel="stylesheet" type="text/css" media="all">
+  <link href="./singolo3.css" rel="stylesheet" type="text/css" media="all">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,700i,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="wrapper-3">
-     
+    <div class="get--a--quote">
+
+    </div>
+    <footer class="footer">
+    </footer>
   </div>
 
 </body>
