feat:footer an getAQuote

--- a/singolo3.html
+++ b/singolo3.html
@@ -14,9 +14,55 @@
 <body>
   <div class="wrapper-3">
     <div class="get--a--quote">
+      <h2>Get a Quote</h2>
+      <div class="description">
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris
+        condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula,
+        eget <span class="letterspace">lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+          tortor mauris condimentum nibh.
+      </div>
 
+      <div class="form--and--info">
+        <form>
+          <input type="text" class="name" name="name" placeholder="Name (Required)">
+          <input type="email" class="email" name="email" placeholder="Email (Required)" required>
+          <input type="text" class="subject" name="subject" placeholder="Subject" required>
+          <textarea class="comment" name="comment" placeholder="Describe your project in detail..."></textarea>
+          <input class="submit" type="submit" name="submit" value="Submit">
+        </form>
+        <section class="info">
+
+          <h3>Contact Information</h3>
+          <p class="description"> Quisque hendrerit purus dapibus, ornare nibh vitae,
+            viver-<wbr>ra nibh. Fusce vitae aliquam tellus.
+            Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus.
+            Morbi at aliquet turpis, et consequat felis.
+          </p>
+          <div class="contacts">
+            <a class="contactsLocation" href="#">
+              <img src="./assets/img/location.png" alt="location.png" class="contactIcons">
+              <span class="contactLink">Elm St. 14/05 Lost City</span>
+            </a>
+            <a class="contactsPhone" href="tel:035283318635">
+              <img src="./assets/img/phone.png" alt="phone.png" class="contactIcons">
+              <span class="contactLink">03528 331 86 35</span>
+            </a>
+            <a class="contactsMail" href="mailto:info@singolo.com">
+              <img src="./assets/img/mail.png" alt="mail.png" class="contactIcons">
+              <span class="contactLink">info@singolo.com</span>
+            </a>
+          </div>
+        </section>
+      </div>
     </div>
     <footer class="footer">
+      <p class="copyright">&copy; Copyright 2013</p>
+      <div class="icons">
+        <img src="./assets/img/facebook.png" alt="facebook.png" class="borderIcons">
+        <img src="./assets/img/google+.png" alt="google+.png" class="borderIcons">
+        <img src="./assets/img/twitter.png" alt="twitter.png" class="borderIcons">
+        <img src="./assets/img/linkedin.png" alt="linkedin.png" class="borderIcons">
+      </div>
     </footer>
   </div>
 
