add: html and styles. singolo almost ready

--- a/index.html
+++ b/index.html
@@ -2,17 +2,235 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Project</title>
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
-  <link href="./singolo1.css" rel="stylesheet" type="text/css" media="all">
+  <link href="./style.css" rel="stylesheet" type="text/css" media="all">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,700i,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  
-</body>
+  <header class="header">
+    <div class="logo">
+      <span class="logoSpan">SINGOLO<span class="red">*</span></span>
+    </div>
+    <nav class="navigation">
+      <ul>
+        <li><a href="#"><span class="red">HOME</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </nav>
+  </header>
+  <h1>iPhones</h1>
 
+
+  <div class="main">
+    <img src="./assets/img/arrowLeft.svg" class="arrowLeft">
+    <img src="./assets/img/iPhoneVertical.png" class="iPhoneVertical">
+    <img src="./assets/img/iPhoneHorizontal.png" class="iPhoneGorizontal">
+    <img src="./assets/img/arrowRight.svg" class="arrowRight">
+  </div>
+  <section class="services">
+    <h2 class="h2">Our Services</h2>
+    <p class="servicesDescription">Fusce dapibus, tellus ac cursus commodo,
+      tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat
+      porttitor ligula, eget <span class="crutch">lacinia odio sem nec elit.
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</span>
+    </p>
+    <div class="cards">
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/pen.svg"></div>
+        <div class="cardText">
+          <h3>Custom Design</h3>
+          <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
+            laoreet, viverra lacus ut,ultrices velit </p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/bulb.svg"></div>
+        <div class="cardText">
+          <h3>Inovative Ideas</h3>
+          <p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus,
+            nec rutrum tellus dolor id lorem</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/heart.svg"></div>
+        <div class="cardText">
+          <h3>Love Is The Answer</h3>
+          <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
+            consequat felis. Quisque condimentum</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/phone.svg"></div>
+        <div class="cardText">
+          <h3>Responsive Layout</h3>
+          <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit
+            nunc ligula. Prae- cent elit leo.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/bubble.svg"></div>
+        <div class="cardText">
+          <h3>24/ 7 Support</h3>
+          <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a
+            sem erat. Pellen- tesque egestas venenatis lorem.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="ellipseBack"><img src="./assets/img/star.svg"></div>
+        <div class="cardText">
+          <h3>Feel Like A Star</h3>
+          <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
+            Fusce vitae aliquam tellus.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <div class="wrapper-2">
+    <section class="portfolio">
+      <h2>Portfolio</h2>
+      <div class="portfolio-text">Duis mollis, est non commodo luctus, nisi erat porttitor
+        ligula, eget lacinia odio sem nec elit.</div>
+      <div class="portfolio-buttons">
+        <div class="portfolio-button">All</div>
+        <div class="portfolio-button">Web Design</div>
+        <div class="portfolio-button">Graphic Design</div>
+        <div class="portfolio-button">Artwork</div>
+      </div>
+      <div class="portfolio-img">
+        <div><img src="./assets/img/img1.jpg"></div>
+        <div><img src="./assets/img/img2.jpg"></div>
+        <div><img src="./assets/img/img3.jpg"></div>
+        <div><img src="./assets/img/img4.jpg"></div>
+        <div><img src="./assets/img/img5.jpg"></div>
+        <div><img src="./assets/img/img6.jpg"></div>
+        <div><img src="./assets/img/img7.jpg"></div>
+        <div><img src="./assets/img/img8.jpg"></div>
+        <div><img src="./assets/img/img9.jpg"></div>
+        <div><img src="./assets/img/img10.jpg"></div>
+        <div><img src="./assets/img/img11.jpg"></div>
+        <div><img src="./assets/img/img12.jpg"></div>
+        <div><img src="./assets/img/img12.jpg"></div>
+      </div>
+
+    </section>
+
+    <section class="about-us">
+      <h2>About Us</h2>
+      <p class="about-description">
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris
+        condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula,
+        eget <span class="crutch">lacinia odio sem nec elit. Fusce dapibus,
+          tellus ac cursus commodo, tortor mauris condimentum nibh. </span>
+      </p>
+
+      <div class="cards">
+        <div class="card">
+          <img src="./assets/img/face1.png">
+          <h2>Adam Jensen</h2>
+          <p class="description">
+            Quisque luctus, quam eget molestie commodo, lacus purus cursus purus,
+            nec rutrum tellus dolor id lorem.
+          </p>
+          <div class="icons">
+            <img src="./assets/img/facebook.png" class="icon">
+            <img src="./assets/img/google+.png" class="icon">
+            <img src="./assets/img/twitter.png" class="icon">
+            <img src="./assets/img/linkedin.png" class="icon">
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/img/face2.png">
+          <h2>Desmond Miles</h2>
+          <p class="description">
+            Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet,
+            viverra lacus ut, ultrices velit.
+          </p>
+          <div class="icons">
+            <img src="./assets/img/facebook.png" class="icons">
+            <img src="./assets/img/google+.png" class="icon">
+            <img src="./assets/img/twitter.png" class="icon">
+            <img src="./assets/img/linkedin.png" class="icon">
+          </div>
+        </div>
+        <div class="card"><img src="./assets/img/face3.png">
+          <h2>Scolara Visari</h2>
+          <p class="description">
+            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
+            conequat felis. Quisque condimentum.
+          </p>
+          <div class="icons">
+            <img src="./assets/img/facebook.png" class="icon">
+            <img src="./assets/img/google+.png" class="icon">
+            <img src="./assets/img/twitter.png" class="icon">
+            <img src="./assets/img/linkedin.png" class="icon">
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+
+  <div class="wrapper-3">
+    <div class="get--a--quote">
+      <h2>Get a Quote</h2>
+      <div class="description">
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris
+        condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula,
+        eget <span class="letterspace">lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+          tortor mauris condimentum nibh.
+      </div>
+
+      <div class="form--and--info">
+        <form>
+          <input type="text" class="name" name="name" placeholder="Name (Required)">
+          <input type="email" class="email" name="email" placeholder="Email (Required)" required>
+          <input type="text" class="subject" name="subject" placeholder="Subject" required>
+          <textarea class="comment" name="comment" placeholder="Describe your project in detail..."></textarea>
+          <input class="submit" type="submit" name="submit" value="Submit">
+        </form>
+        <section class="info">
+
+          <h3>Contact Information</h3>
+          <p class="description"> Quisque hendrerit purus dapibus, ornare nibh vitae,
+            viver-<wbr>ra nibh. Fusce vitae aliquam tellus.
+            Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus.
+            Morbi at aliquet turpis, et consequat felis.
+          </p>
+          <div class="contacts">
+            <a class="contactsLocation" href="#">
+              <img src="./assets/img/location.png" alt="location.png" class="contactIcons">
+              <span class="contactLink">Elm St. 14/05 Lost City</span>
+            </a>
+            <a class="contactsPhone" href="tel:035283318635">
+              <img src="./assets/img/phone.png" alt="phone.png" class="contactIcons">
+              <span class="contactLink">03528 331 86 35</span>
+            </a>
+            <a class="contactsMail" href="mailto:info@singolo.com">
+              <img src="./assets/img/mail.png" alt="mail.png" class="contactIcons">
+              <span class="contactLink">info@singolo.com</span>
+            </a>
+          </div>
+        </section>
+      </div>
+    </div>
+    <footer class="footer">
+      <p class="copyright">&copy; Copyright 2013</p>
+      <div class="icons">
+        <img src="./assets/img/facebook.png" alt="facebook.png" class="borderIcons">
+        <img src="./assets/img/google+.png" alt="google+.png" class="borderIcons">
+        <img src="./assets/img/twitter.png" alt="twitter.png" class="borderIcons">
+        <img src="./assets/img/linkedin.png" alt="linkedin.png" class="borderIcons">
+      </div>
+    </footer>
+  </div>
+</body>
 </html>
