--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <nav class="navigation">
       <ul>
-        <li><a href="#"><span class="red">HOME</a></li>
+        <li><a href="#"><span class="red">HOME</span></a></li>
         <li><a href="#">SERVICES</a></li>
         <li><a href="#">PORTFOLIO</a></li>
         <li><a href="#">ABOUT</a></li>
@@ -29,10 +29,10 @@
 
 
   <div class="main">
-    <img src="./assets/img/arrowLeft.svg" class="arrowLeft">
-    <img src="./assets/img/iPhoneVertical.png" class="iPhoneVertical">
-    <img src="./assets/img/iPhoneHorizontal.png" class="iPhoneGorizontal">
-    <img src="./assets/img/arrowRight.svg" class="arrowRight">
+    <img src="./assets/img/arrowLeft.svg" alt="img" class="arrowLeft">
+    <img src="./assets/img/iPhoneVertical.png" alt="img" class="iPhoneVertical">
+    <img src="./assets/img/iPhoneHorizontal.png" alt="img" class="iPhoneGorizontal">
+    <img src="./assets/img/arrowRight.svg" alt="img" class="arrowRight">
   </div>
   <section class="services">
     <h2 class="h2">Our Services</h2>
@@ -43,7 +43,7 @@
     </p>
     <div class="cards">
       <div class="card">
-        <div class="ellipseBack"><img src="./assets/img/pen.svg"></div>
+        <div class="ellipseBack"><img src="./assets/img/pen.svg" alt="img"></div>
         <div class="cardText">
           <h3>Custom Design</h3>
           <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="ellipseBack"><img src="./assets/img/bulb.svg"></div>
+        <div class="ellipseBack"><img src="./assets/img/bulb.svg" alt="img"></div>
         <div class="cardText">
           <h3>Inovative Ideas</h3>
           <p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus,
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="ellipseBack"><img src="./assets/img/heart.svg"></div>
+        <div class="ellipseBack"><img src="./assets/img/heart.svg" alt="img"></div>
         <div class="cardText">
           <h3>Love Is The Answer</h3>
           <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="ellipseBack"><img src="./assets/img/phone.svg"></div>
+        <div class="ellipseBack"><img src="./assets/img/phone.svg" alt="img"></div>
         <div class="cardText">
           <h3>Responsive Layout</h3>
           <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit
@@ -75,7 +75,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="ellipseBack"><img src="./assets/img/bubble.svg"></div>
+        <div class="ellipseBack"><img src="./assets/img/bubble.svg" alt="img"></div>
         <div class="cardText">
           <h3>24/ 7 Support</h3>
           <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="ellipseBack"><img src="./assets/img/star.svg"></div>
+        <div class="ellipseBack"><img src="./assets/img/star.svg" alt="img"></div>
         <div class="cardText">
           <h3>Feel Like A Star</h3>
           <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
@@ -106,19 +106,19 @@
         <div class="portfolio-button">Artwork</div>
       </div>
       <div class="portfolio-img">
-        <div><img src="./assets/img/img1.jpg"></div>
-        <div><img src="./assets/img/img2.jpg"></div>
-        <div><img src="./assets/img/img3.jpg"></div>
-        <div><img src="./assets/img/img4.jpg"></div>
-        <div><img src="./assets/img/img5.jpg"></div>
-        <div><img src="./assets/img/img6.jpg"></div>
-        <div><img src="./assets/img/img7.jpg"></div>
-        <div><img src="./assets/img/img8.jpg"></div>
-        <div><img src="./assets/img/img9.jpg"></div>
-        <div><img src="./assets/img/img10.jpg"></div>
-        <div><img src="./assets/img/img11.jpg"></div>
-        <div><img src="./assets/img/img12.jpg"></div>
-        <div><img src="./assets/img/img12.jpg"></div>
+        <div><img src="./assets/img/img1.jpg" alt="img"></div>
+        <div><img src="./assets/img/img3.jpg" alt="img"></div>
+        <div><img src="./assets/img/img2.jpg" alt="img"></div>
+        <div><img src="./assets/img/img4.jpg" alt="img"></div>
+        <div><img src="./assets/img/img5.jpg" alt="img"></div>
+        <div><img src="./assets/img/img6.jpg" alt="img"></div>
+        <div><img src="./assets/img/img7.jpg" alt="img"></div>
+        <div><img src="./assets/img/img8.jpg" alt="img"></div>
+        <div><img src="./assets/img/img9.jpg" alt="img"></div>
+        <div><img src="./assets/img/img10.jpg" alt="img"></div>
+        <div><img src="./assets/img/img11.jpg" alt="img"></div>
+        <div><img src="./assets/img/img12.jpg" alt="img"></div>
+        <div><img src="./assets/img/img12.jpg" alt="img"></div>
       </div>
 
     </section>
@@ -134,44 +134,44 @@
 
       <div class="cards">
         <div class="card">
-          <img src="./assets/img/face1.png">
+          <img src="./assets/img/face1.png" alt="img">
           <h2>Adam Jensen</h2>
           <p class="description">
             Quisque luctus, quam eget molestie commodo, lacus purus cursus purus,
             nec rutrum tellus dolor id lorem.
           </p>
           <div class="icons">
-            <img src="./assets/img/facebook.png" class="icon">
-            <img src="./assets/img/google+.png" class="icon">
-            <img src="./assets/img/twitter.png" class="icon">
-            <img src="./assets/img/linkedin.png" class="icon">
+            <img src="./assets/img/facebook.png" alt="img" class="icon">
+            <img src="./assets/img/google+.png" alt="img" class="icon">
+            <img src="./assets/img/twitter.png" alt="img" class="icon">
+            <img src="./assets/img/linkedin.png" alt="img" class="icon">
           </div>
         </div>
         <div class="card">
-          <img src="./assets/img/face2.png">
+          <img src="./assets/img/face2.png" alt="img">
           <h2>Desmond Miles</h2>
           <p class="description">
             Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet,
             viverra lacus ut, ultrices velit.
           </p>
           <div class="icons">
-            <img src="./assets/img/facebook.png" class="icons">
-            <img src="./assets/img/google+.png" class="icon">
-            <img src="./assets/img/twitter.png" class="icon">
-            <img src="./assets/img/linkedin.png" class="icon">
+            <img src="./assets/img/facebook.png" alt="img" class="icons">
+            <img src="./assets/img/google+.png" alt="img" class="icon">
+            <img src="./assets/img/twitter.png" alt="img" class="icon">
+            <img src="./assets/img/linkedin.png" alt="img" class="icon">
           </div>
         </div>
-        <div class="card"><img src="./assets/img/face3.png">
+        <div class="card"><img src="./assets/img/face3.png" alt="img">
           <h2>Scolara Visari</h2>
           <p class="description">
             Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
             conequat felis. Quisque condimentum.
           </p>
           <div class="icons">
-            <img src="./assets/img/facebook.png" class="icon">
-            <img src="./assets/img/google+.png" class="icon">
-            <img src="./assets/img/twitter.png" class="icon">
-            <img src="./assets/img/linkedin.png" class="icon">
+            <img src="./assets/img/facebook.png" alt="img" class="icon">
+            <img src="./assets/img/google+.png" alt="img" class="icon">
+            <img src="./assets/img/twitter.png" alt="img" class="icon">
+            <img src="./assets/img/linkedin.png" alt="img" class="icon">
           </div>
         </div>
       </div>
@@ -186,7 +186,7 @@
         Fusce dapibus, tellus ac cursus commodo, tortor mauris
         condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula,
         eget <span class="letterspace">lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
-          tortor mauris condimentum nibh.
+          tortor mauris condimentum nibh.</span>
       </div>
 
       <div class="form--and--info">
