--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <span class="logoSpan">SINGOLO<span class="red">*</span></span>
+      <h1 class="logoSpan">SINGOLO<span class="red">*</span></h1>
     </div>
     <nav class="navigation">
       <ul>
@@ -25,7 +25,6 @@
       </ul>
     </nav>
   </header>
-  <h1>iPhones</h1>
 
 
   <div class="main">
@@ -47,7 +46,7 @@
         <div class="cardText">
           <h3>Custom Design</h3>
           <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
-            laoreet, viverra lacus ut,ultrices velit </p>
+            laoreet, viverra lacus ut,ultrices velit. </p>
         </div>
       </div>
       <div class="card">
@@ -55,7 +54,7 @@
         <div class="cardText">
           <h3>Inovative Ideas</h3>
           <p>Quisque luctus, quam eget molestie com- modo, lacus purus cursus purus,
-            nec rutrum tellus dolor id lorem</p>
+            nec rutrum tellus dolor id lorem.</p>
         </div>
       </div>
       <div class="card">
@@ -63,7 +62,7 @@
         <div class="cardText">
           <h3>Love Is The Answer</h3>
           <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
-            consequat felis. Quisque condimentum</p>
+            consequat felis. Quisque condimentum.</p>
         </div>
       </div>
       <div class="card">
