fix:add interactive imgs

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             viverra lacus ut, ultrices velit.
           </p>
           <div class="icons">
-            <img src="./assets/img/facebook.png" alt="img" class="icons">
+            <img src="./assets/img/facebook.png" alt="img" class="icon">
             <img src="./assets/img/google+.png" alt="img" class="icon">
             <img src="./assets/img/twitter.png" alt="img" class="icon">
             <img src="./assets/img/linkedin.png" alt="img" class="icon">
