--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="./assets/img/iPhoneHorizontal.png" alt="img" class="iPhoneGorizontal" id="horizontal-phone">
       </div>
       <div class="slide2" id="slide2">
-        <span>!!!!!!!!!!!!!!!!!!!!!!slide2</span>
+        <img src="./assets/img/slide2.png">
       </div>
     </div>
   </div>
