change nav-menu id

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h1 class="logoSpan">SINGOLO<span class="red">*</span></h1>
     </div>
     <nav class="navigation">
-      <ul id="menu">
+      <ul id="menu--main">
         <li><a href="#"><span>HOME</span></a></li>
         <li><a href="#services"><span>SERVICES</span></a></li>
         <li><a href="#portfolio"><span>PORTFOLIO</span></a></li>
